# multi-source

./: README.md  compile_app_1_16FL.sh  compile_app_1_48FL.sh  compile_app_48S_24S.sh  compile_app_5_16M.sh
app/: CMakeLists.txt  Kconfig  base_1_16fl.conf  base_1_48fl.conf  base_48s_24s.conf  base_5_16m.conf  overlay-bt_ll_sw_split.conf  prj.conf
app/src/: Sine0200Hz_1s_16.lc3  Sine0200Hz_1s_24.lc3  Sine0200Hz_1s_48.lc3  Sine0250Hz_1s_16.lc3  Sine0250Hz_1s_24.lc3  Sine0250Hz_1s_48.lc3  Sine0320Hz_1s_16.lc3  Sine0320Hz_1s_24.lc3  Sine0320Hz_1s_48.lc3  Sine0400Hz_1s_16.lc3  Sine0400Hz_1s_24.lc3  Sine0400Hz_1s_48.lc3  Sine0500Hz_1s_16.lc3  Sine0500Hz_1s_24.lc3  Sine0500Hz_1s_48.lc3  Sine0800Hz_1s_16.lc3  Sine0800Hz_1s_24.lc3  Sine0800Hz_1s_48.lc3  Sine1000Hz_1s_16.lc3  Sine1000Hz_1s_24.lc3  Sine1000Hz_1s_48.lc3  Sine1500Hz_1s_16.lc3  Sine1500Hz_1s_24.lc3  Sine1600Hz_1s_16.lc3  Sine1600Hz_1s_24.lc3  Sine1600Hz_1s_48.lc3  Sine2000Hz_1s_16.lc3  Sine2000Hz_1s_24.lc3  Sine2000Hz_1s_48.lc3  Sine4000Hz_1s_16.lc3  Sine4000Hz_1s_24.lc3  Sine4000Hz_1s_48.lc3  main.c  sine_data.h
